# Work_mmdection

./: README.md
deepsort/: CMakeLists.txt  base.cpp  deepsort.cpp  tracker.cpp  tracker.hpp  yolo.cpp
qt-seg/: .gitignore  README.md  controller.cpp  controller.h  main.cpp  main.qml  myonnx.cpp  myonnx.h  mytransform.cpp  mytransform.h  utils.cpp  utils.h
